# azure-cpp-from-source-sample

./: CMakeLists.txt  README.md  main.cpp
lib/azure-core/: CMakeLists.txt
lib/azure-identity/: CMakeLists.txt
lib/azure-security-keyvault-secrets/: CMakeLists.txt
